--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
       <h1>Introduction</h1>
       <p>I'm a full stack developer in training</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Elk Grove in Sacramento, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to learn knew things, cook delicious meals, explore through hiking, and playing on the beach.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'm still trying to figure this out but it might have something to do with mediation.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Normal Heights in San Diego, CA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <ul>
+        <li>I love to desgin things and solve problems</li>
+        <li>I love to communicate clearly, effectivley, and contextually</li>
+        <li>I use computers and the internet everyday of my life and I want to understand how it works and can see the potential for how aquiring these skills could help me and my community</li>
+      </ul>
     </section>
 
     <footer id="footer">
